# legday

./: .gitignore  CMakeLists.txt  README.md
include/: legday.h  legday_impl.h
lib/: CMakeLists.txt  legday_impl.h  liblegday.cpp  main.cpp  test_legday.cpp
scripts/: bench.sh  compare.py  correlation.py  create_venv.sh  dump_weights.py  load_model.py  requirements.txt  scan.py
test/: CMakeLists.txt  test_legday.cpp
utility/: CMakeLists.txt  main.cpp
